# min-traverser

./: .gitignore  CMakeLists.txt  InputParser.cpp  InputParser.h  Node.cpp  Node.h  README.md  Tarjan.cpp  Tarjan.h  main.cpp  sample_input.txt
models/: InputParser.cpp  InputParser.h  Node.cpp  Node.h  Report.h  Tarjan.cpp  Tarjan.h  TraverseMinimizer.cpp  TraverseMinimizer.h
